--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -10,3 +10,13 @@
   border: 1px solid var(--color-black);
   border-radius: 4px;
 }
+.link {
+  background: none;
+  border-radius: 5px;
+  font-weight: 800;
+  min-height: 35px;
+  min-width: 40px;
+  border: 1px solid var(--color-black);
+  color: var(--color-black);
+  padding: 10px;
+}
